@startuml EquipeCinema

title Diagrama de Classes - Equipes de Cinema

interface Team {
  + void partOf();
}

class Cast implements Team {
  + void partOf();
}

class Crew implements Team {
  + void partOf();
}

class Person {
    - Team team;
    - Employee emplys;
    + void setTime(Team team);
    + void partOf();
    + void setEmployee(Employee emplys);
    + float calcSalary(int days);
}

Person *--> Team

interface Employee {
  - days
  + float calcSalary();
}

class Director implements Employee {
  + float calcSalary();
}

class Actor implements Employee {
  + float calcSalary();
}

Person *--> Employee

@enduml